--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: The Programming Butler
+email: jonmagic@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am a geek by choice and a geek by trade. I live with my family in Northern
+  California where we love to cook, explore, and enjoy life. I work at GitHub
+  where I solve problems with software and buttle now and again.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://theprogrammingbutler.com" # the base hostname & protocol for your site
+twitter_username: jonmagic
+github_username:  jonmagic
 
 # Build settings
 markdown: kramdown
